--- a/docs/_main.tex
+++ b/docs/_main.tex
@@ -113,14 +113,14 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same}
 \hypersetup{
-  pdftitle={1-EDA},
+  pdftitle={Aprenda Estatística},
   pdfauthor={Giseldo da Silva Neo},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
-\title{1-EDA}
+\title{Aprenda Estatística}
 \author{Giseldo da Silva Neo}
-\date{2024-03-11}
+\date{}
 
 \begin{document}
 \maketitle
@@ -157,12 +157,16 @@ Muitas vezes é conveniente representar um conjunto de números de uma forma mai
 \end{Highlighting}
 \end{Shaded}
 
+\begin{verbatim}
+## [14, 15, 16, 14, 17]
+\end{verbatim}
+
 Podemos representar essa lista com um número mais simples, que pode resumir ou representar aquela lista original. Para isso, utilizamos as \textbf{estimativas de localização \citep{bruce2020practical}}. As mais comuns são \textbf{média} e \textbf{mediana}.
 
 \hypertarget{muxe9dia}{%
 \subsection{Média}\label{muxe9dia}}
 
-A média é calculada dividindo a soma de todos os números da lista pela quantidade de itens. Sua fórmula matemática é apresentada em FIGURA XXX. Onde i é a quantidade de itens da lista e \(x_i\) é o enésimo item da lista. O termo média também pode ser representado pelo símbolo \(X_\)
+A média é calculada dividindo a soma de todos os números da lista pela quantidade de itens. Sua fórmula matemática é apresentada em FIGURA XXX. Onde i é a quantidade de itens da lista e \(x_i\) é o enésimo item da lista. O termo média também pode ser representado pelo símbolo \(X\)
 
 No nosso exemplo se fossemos calcular manualmente a média da lista \textbf{idade}, o cálculo seria:
 
@@ -182,7 +186,11 @@ No nosso exemplo se fossemos calcular manualmente a média da lista \textbf{idad
 \end{Highlighting}
 \end{Shaded}
 
-Porém, podemos criar algumas funções que já disponibilizam esse recurso. O código para criar uma lista e verificar a média dessa lista, utilizando as funções, no R e no Python, seria o seguinte:
+\begin{verbatim}
+## 15.2
+\end{verbatim}
+
+Porém, utilizar algumas funções que já disponibilizam esse recurso. O código para criar uma lista e verificar a média dessa lista, utilizando as funções, no R e no Python, seria o seguinte:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -202,6 +210,10 @@ Porém, podemos criar algumas funções que já disponibilizam esse recurso. O c
 \BuiltInTok{print}\NormalTok{(mean(idades))}
 \end{Highlighting}
 \end{Shaded}
+
+\begin{verbatim}
+## 15.2
+\end{verbatim}
 
 A função \textbf{mean,} no R, recebe como parâmetro uma lista de itens e retorna a média dessa lista, no python utilizei a função \textbf{mean}, da biblioteca statistics.
 
@@ -236,17 +248,17 @@ Na nossa lista de idades, a idade é um dado do estudante do tipo \textbf{numér
 
 Um dado é do tipo \textbf{categórico} representa um valor dentro de um conjunto ou de uma categoria.
 
-O dado \textbf{categórico} pode ser binário ou ordinal, ou nenhuma das duas subcategorias.
+O dado \textbf{categórico} pode ser \textbf{categótico binário} ou \textbf{categórito ordinal}, ou nenhuma das duas subcategorias, ou seja somente \textbf{categórico}.
 
-Um exemplo de \textbf{dado categórico}, é uma lista com as cores preferidas dos estudantes, ou o estado civil de uma pessoa.
+Um exemplo de \textbf{dado categórico}, é uma lista com as cores preferidas dos estudantes (azul, verde, vermelho), ou o estado civil de uma pessoa (casado, solteiro).
 
 O dado do tipo \textbf{categórico binário} é um tipo especial quando ele somente pode assumir dois valores no universo de valores possíveis. Por exemplo 0 ou 1, existente ou ausente, true ou false, sim e não.
 
-O dado do tipo \textbf{categórico ordinal} também é quando o valor do dado faz parte de um conjunto com determinada ordem, por exemplo, imagine a classificação de altura de estudantes onde somente com os valores alto, médio e baixo. Nesse exemplo existe uma ordem, o aluno com altura classificado como baixo tem uma altura menor do que o aluno com altura média.
+O dado do tipo \textbf{categórico ordinal} é quando o valor do dado é um elemento de um conjunto que pode ser ordenado, por exemplo, imagine a classificação de altura de estudantes onde somente com os valores alto, médio e baixo são permitidos. Nesse exemplo existe uma ordem, o aluno com altura classificado como baixo tem uma altura menor do que o aluno com altura média.
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 2\tabcolsep) * \real{0.2336}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 2\tabcolsep) * \real{0.7664}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 2\tabcolsep) * \real{0.2987}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 2\tabcolsep) * \real{0.7013}}@{}}
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
 Variável
@@ -262,12 +274,17 @@ Doença (Ausente, Presente) & categório binário \\
 Story Points (1, 3, 5, 7 \ldots{} ) & categorico ordinal \\
 Ano (2021, 2022, \ldots) & numérico discreto \\
 Altura (1,79 - 2,05 - \ldots) & numérico contínuo \\
+Estado Civil (Casado, Solteiro) & categórico binário \\
+Cores preferidas (Azul, verde, vermelho) & categórico \\
 \end{longtable}
 
 \hypertarget{anuxe1lise-exploratuxf3ria-dos-dados}{%
-\section{Análise exploratória dos dados}\label{anuxe1lise-exploratuxf3ria-dos-dados}}
+\chapter{Análise exploratória dos dados}\label{anuxe1lise-exploratuxf3ria-dos-dados}}
 
-Um dos pioneiros na definição da área de análise exploratória de dados (em inglês Estatistical Data Analisys, ou EDA) foi Tukey (1997) \citep{tukey1977exploratory}. Tukey (1997) defende que seu foco estava em desenvolver novas técnicas para inferência. Porém, depois de reflexão, ele chega a conclusão de que o foco dele, e de outros estatísticos, seria melhor aplicado no desenvolvimento de técnicas para a análise dos dados anterior a esse processo inferência. Era nos procedimentos de estruturar os dados que estava o verdadeiro desafio. Problemas, tais como, lidar com dados faltantes ou \emph{outliers,} traziam impactos negativos na inferência e novas técnicas nessa etapa precisavam ser estudadas. Sua recomendação era uma mudança de paradigma e novos estudos, voltando mais na preparação dos dados. Sua visão é de que isso iria trazer enorme avanços como um todo. O que de fato aconteceu.
+\hypertarget{introduuxe7uxe3o-1}{%
+\section{Introdução}\label{introduuxe7uxe3o-1}}
+
+Um dos pioneiros na definição da área de análise exploratória de dados (em inglês Estatistical Data Analisys, ou EDA) foi Tukey (1997) \citep{tukey1977exploratory}. Tukey (1997) defende que seu foco estava em desenvolver novas técnicas para inferência. Porém, depois de reflexão, ele chega a conclusão de que o foco dele, e de outros estatísticos, seria melhor aplicado no desenvolvimento de técnicas para a análise dos dados anterior a esse processo inferência. Era nos procedimentos de estruturar os dados que estava o verdadeiro desafio. Problemas, tais como, lidar com dados faltantes ou \emph{outliers,} traziam impactos negativos na inferência e novas técnicas nessa etapa precisavam ser estudadas. Sua recomendação era uma mudança de paradigma e novos estudos, voltando mais para a preparação dos dados. Sua visão é de que isso iria trazer enorme avanços como um todo. O que de fato aconteceu.
 
 Podemos considerar essa necessidade de estudos anterior ao processo de inferência analisando o exemplo criado por Ancobe.
 
@@ -314,6 +331,16 @@ Para os dados da Amostra 1, acima temos uma correlação de
 \end{Shaded}
 
 \includegraphics{_main_files/figure-latex/unnamed-chunk-9-1.pdf}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\ImportTok{import}\NormalTok{ matplotlib.pyplot }\ImportTok{as}\NormalTok{ plt}
+\NormalTok{plt.plot([}\DecValTok{0}\NormalTok{, }\DecValTok{1}\NormalTok{, }\DecValTok{2}\NormalTok{, }\DecValTok{3}\NormalTok{])}
+\NormalTok{plt.show()}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{_main_files/figure-latex/unnamed-chunk-10-1.pdf}
 
   \bibliography{book.bib,packages.bib}
 
